# CSC_RO_14_Projet_Drone_ROS

./: .gitignore  README.md
Arduino/RosserialTourelle/: RosserialTourelle.ino
Arduino/libraries/ros_lib/husky_msgs/: HuskyStatus.h
Arduino/libraries/ros_lib/tourelle_controller/: TourelleAngles.h
Arduino/testHelloWorldRosserial/: testHelloWorldRosserial.ino
Arduino/testcommunication/: testcommunication.ino
Arduino/testmoteur/: testmoteur.ino
Arduino/testmoteuraveccommunication/: testmoteuraveccommunication.ino
drone_allie/src/codec_image_transport/: package.xml
drone_ally/src/codec_image_transport/: CMakeLists.txt
drone_ally/src/lm_tello_controller/: CMakeLists.txt  package.xml
drone_ally/src/lm_tello_controller/include/lm_tello_controller/: MyController.hpp
drone_ally/src/lm_tello_controller/launch/: lm_tello_controller.launch
drone_ally/src/lm_tello_controller/src/: MyController.cpp  MyController_REF.cpp  MyNode.cpp
drone_ally/src/natnet_ros_cpp/launch/: natnet_ros.launch
drone_ally/src/tello_driver/src/TelloPy/files/: release-how-to.txt
drone_ennemy/src/tello_driver/: CMakeLists.txt
drone_ennemy/src/tello_driver/launch/: tello_node.launch
drone_ennemy/src/tello_driver/nodes/: tello_detect_tag.py  tello_driver_node
tourelle/src/tourelle_controller/: CMakeLists.txt  package.xml
tourelle/src/tourelle_controller/include/tourelle_controller/: MyController.hpp  MyTest.hpp
tourelle/src/tourelle_controller/launch/: tourelle.launch
tourelle/src/tourelle_controller/msg/: TourelleAngles.msg
tourelle/src/tourelle_controller/src/: MyController.cpp  MyNode.cpp  MyTest.cpp  MyTestNode.cpp
